attempt to fix blurry font on saf and fire

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     padding: 0px;
     border: 0px;
     background-color: #FAF9F6;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
